--- a/index.html
+++ b/index.html
@@ -12,49 +12,59 @@
 </head>
 <body>
     <header>
-        <div class="container">
+        <div class="header">
             <nav class="nav">
                 <ul class="nav-list">
-                  <li class="nav-item"><a href="#about" class="nav-link">About Me</a></li>
-                  <li class="nav-item"><a href="#education" class="nav-link">Education</a></li>
-                  <li class="nav-item"><a href="#skills" class="nav-link">Skills</a></li>
-                  <li class="nav-item"><a href="#contacts" class="nav-link">Contacts</a></li>
-                  <li class="nav-item"><a href="#code" class="nav-link">Code</a></li>
-                  <li class="nav-item"><a href="#english" class="nav-link">English</a></li>
+                  <li class="nav-item section-item"><a href="#about" class="nav-link">About Me</a></li>
+                  <li class="nav-item section-item"><a href="#education" class="nav-link">Education</a></li>
+                  <li class="nav-item section-item"><a href="#skills" class="nav-link">Skills</a></li>
+                  <li class="nav-item section-item"><a href="#contacts" class="nav-link">Contacts</a></li>
+                  <li class="nav-item section-item"><a href="#code" class="nav-link">Code</a></li>
+                  <li class="nav-item section-item"><a href="#english" class="nav-link">English</a></li>
                 </ul>
               </nav>
         </div>
 
     </header>
-    <main class="main-container">
-        <div class="container">
-            <section class="section-profile" id="profile">
-                <h1 class="section-title">Viktor Ilikeev</h1>
+    <main class="main">
+        <div class="main-container container">
+            <section class="section-profile section" id="profile">
                 <img src="assets/img/Beautiful_man.jpg" alt="My foto" class="section-foto">
+                <div class="section-profile-title">
+                    <h1 class="main-section-title">Viktor</h1>
+                    <h1 class="main-section-title">Ilikeev</h1>
+                    <h3 class="main-section-title-outside">JUNIOR FRONT-END DEVELOPER</h3>
+                </div>
             </section>
             <section class="section" id="about">
                 <h2 class="section-title">About Me</h2>
+                <p>I like programming. It is fascinating and interesting. I have a main job, programming is a hobby for me. I have completed several training projects and now I would like to take part in the creation of a real JavaScript project. My goal is to learn a pure JavaScript at a good level and learn the React library. I will be glad to join the creation of open source projects. I would like to work under the guidance of an experienced developer to gain practical experience.</p>
             </section>
             <section class="section" id="education">
                 <h2 class="section-title">Education</h2>
+                <p>I like programming. It is fascinating and interesting. I have a main job, programming is a hobby for me. I have completed several training projects and now I would like to take part in the creation of a real JavaScript project. My goal is to learn a pure JavaScript at a good level and learn the React library. I will be glad to join the creation of open source projects. I would like to work under the guidance of an experienced developer to gain practical experience.</p>
             </section>
             <section class="section" id="skills">
                 <h2 class="section-title">Skills</h2>
+                <p>I like programming. It is fascinating and interesting. I have a main job, programming is a hobby for me. I have completed several training projects and now I would like to take part in the creation of a real JavaScript project. My goal is to learn a pure JavaScript at a good level and learn the React library. I will be glad to join the creation of open source projects. I would like to work under the guidance of an experienced developer to gain practical experience.</p>
             </section>
             <section class="section" id="contacts">
-                <h2 class="section-title">Contacts</h2>    
+                <h2 class="section-title">Contacts</h2>
+                <p>I like programming. It is fascinating and interesting. I have a main job, programming is a hobby for me. I have completed several training projects and now I would like to take part in the creation of a real JavaScript project. My goal is to learn a pure JavaScript at a good level and learn the React library. I will be glad to join the creation of open source projects. I would like to work under the guidance of an experienced developer to gain practical experience.</p>    
             </section>
             <section class="section" id="code">
                 <h2 class="section-title">Code</h2>
+                pI like programming. It is fascinating and interesting. I have a main job, programming is a hobby for me. I have completed several training projects and now I would like to take part in the creation of a real JavaScript project. My goal is to learn a pure JavaScript at a good level and learn the React library. I will be glad to join the creation of open source projects. I would like to work under the guidance of an experienced developer to gain practical experience.
             </section>
             <section class="section" id="english">
                 <h2 class="section-title">English</h2>
+                <p>I like programming. It is fascinating and interesting. I have a main job, programming is a hobby for me. I have completed several training projects and now I would like to take part in the creation of a real JavaScript project. My goal is to learn a pure JavaScript at a good level and learn the React library. I will be glad to join the creation of open source projects. I would like to work under the guidance of an experienced developer to gain practical experience.</p>
             </section>
         </div>
     </main>
     <footer>
         <div class="container">
-        
+        <div>2022</div>
         </div>
 
     </footer>
