--- a/index.html
+++ b/index.html
@@ -38,11 +38,13 @@
             </section>
             <section class="section" id="about">
                 <h2 class="section-title">About Me</h2>
-                <p>I like programming. It is fascinating and interesting. I have a main job, programming is a hobby for me. I have completed several training projects and now I would like to take part in the creation of a real JavaScript project. My goal is to learn a pure JavaScript at a good level and learn the React library. I will be glad to join the creation of open source projects. I would like to work under the guidance of an experienced developer to gain practical experience.</p>
+                <p>I want to program. I think it's exciting and interesting. I have a main job that I want to change.</p>
+                <p>I am currently working on educational projects.</p> 
+                <p>My goal is to learn JavaScript at a good level. I would like to work under an experienced developer to get hands-on experience.</p>
             </section>
             <section class="section" id="education">
                 <h2 class="section-title">Education</h2>
-                <p>I like programming. It is fascinating and interesting. I have a main job, programming is a hobby for me. I have completed several training projects and now I would like to take part in the creation of a real JavaScript project. My goal is to learn a pure JavaScript at a good level and learn the React library. I will be glad to join the creation of open source projects. I would like to work under the guidance of an experienced developer to gain practical experience.</p>
+                <p>Samara University</p>
             </section>
             <section class="section" id="skills">
                 <h2 class="section-title">Skills</h2>
@@ -50,15 +52,27 @@
             </section>
             <section class="section" id="contacts">
                 <h2 class="section-title">Contacts</h2>
-                <p>I like programming. It is fascinating and interesting. I have a main job, programming is a hobby for me. I have completed several training projects and now I would like to take part in the creation of a real JavaScript project. My goal is to learn a pure JavaScript at a good level and learn the React library. I will be glad to join the creation of open source projects. I would like to work under the guidance of an experienced developer to gain practical experience.</p>    
+                <ul class="section-list">
+                    <li>Samara, Russia</li>
+                    <li>Email:  </li>
+                    <li>Github: </li>
+                    <li>Telegram:</li>
+                    <li>Discord: </li>
+                </ul>
             </section>
             <section class="section" id="code">
                 <h2 class="section-title">Code</h2>
-                pI like programming. It is fascinating and interesting. I have a main job, programming is a hobby for me. I have completed several training projects and now I would like to take part in the creation of a real JavaScript project. My goal is to learn a pure JavaScript at a good level and learn the React library. I will be glad to join the creation of open source projects. I would like to work under the guidance of an experienced developer to gain practical experience.
+                <pre class="pre">
+<code>function factorial(a) {
+if(a < 0) return null;
+if (a <= 1) return 1;
+return a * factorial(a-1);
+}</code>
+                </pre>
             </section>
             <section class="section" id="english">
                 <h2 class="section-title">English</h2>
-                <p>I like programming. It is fascinating and interesting. I have a main job, programming is a hobby for me. I have completed several training projects and now I would like to take part in the creation of a real JavaScript project. My goal is to learn a pure JavaScript at a good level and learn the React library. I will be glad to join the creation of open source projects. I would like to work under the guidance of an experienced developer to gain practical experience.</p>
+                <p>B1 - Pre-Intermediate</p>
             </section>
         </div>
     </main>
